@@ -88,7 +88,7 @@ public class UpdateProductController extends HttpServlet {
         product.setPrice(Integer.parseInt(jsonObject.get("price").getAsString()));
         product.setDescription(jsonObject.get("description").getAsString());
         product.setStock(Integer.parseInt(jsonObject.get("stock").getAsString()));
-        if(!images.isEmpty())product.setImage(images.getFirst().getAsString());
+        if(!images.isEmpty())product.setImage(images.get(0).getAsString());
         product.setBrandName(jsonObject.get("brandName").getAsString());
 
         // Associate the ProductSpecs with the Product
